Complete about section with content and styling

--- a/index.html
+++ b/index.html
@@ -93,11 +93,35 @@
       <div class="about__content--detail">
         <h2 class="heading-2">A bit about myself!</h2>
         <p class="detail-paragraph">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
-          consequatur dolor expedita iste laudantium placeat in minus non
-          impedit aperiam! Dignissimos, temporibus. Nulla ea quod soluta
-          veritatis.
+          An enthusiastic <span class="highlight-text">Front-End developer</span> here! I&#39;m always anxious to
+          learn and explore all there is about the web, constantly making myself
+          up to date with the newest technologies to make my client&#39;s life
+          more efficient and exceed their expectations.<span id="dots">...</span>
+          <div class="collapsible">
+            <p class="detail-paragraph">
+            Having the utmost respect for my client&#39;s hard-earned money is my
+          top priority. Having worked in customer support in the past facilitated me to
+            connect with people with different mindsets regularly that made me
+            who I&#39;m right now. I take pride in being highly adaptable and
+            having a solution-driven approach to my work. <br/>
+            Also, I&#39;m looking for a role as a front-end dev (remote or
+            otherwise).
+            </p>
+        </div>
+          <button class="read-more detail-paragraph secondary-text">
+            read more &darr;
+          </button>
         </p>
+        <h3 class="heading-3">Skills</h3>
+        <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+          <li class="technologies__item sass">SASS</li>
+          <li class="technologies__item bootstrap">bootstrap</li>
+          <li class="technologies__item git">GIT</li>
+        </ul>
+        <h3 class="heading-3">Contact me here!</h3>
         <ul class="about__content--social-icons social-icons">
           <li class="about__content--icon-item social-icons__icon-item">
             <a
@@ -159,7 +183,6 @@
           </li>
         </ul>
 
-        <h3 class="heading-3">Contact me here!</h3>
         <p class="detail-paragraph about__content--contact-detail">
           Email: <span class="secondary-text">us.man.webbiz@gmail.com</span>
         </p>
@@ -222,29 +245,12 @@
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
-            <ul class="portfolio-block__stack-icons">
-              <p class="detail-paragraph">Stack used:&nbsp;</p>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-html5"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-css3"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-sass"></use>
-                </svg>
-              </li>
-            </ul>
+            <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+          <li class="technologies__item sass">SASS</li>
+        </ul>
             <a href="#" class="portfolio-block__view-project btn-primary"
               >View project</a
             >
@@ -268,29 +274,12 @@
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
-            <ul class="portfolio-block__stack-icons">
-              <p class="detail-paragraph">Stack used:&nbsp;</p>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-html5"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-css3"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-sass"></use>
-                </svg>
-              </li>
-            </ul>
+            <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+          <li class="technologies__item sass">SASS</li>
+        </ul>
             <a href="#" class="portfolio-block__view-project btn-primary"
               >View project</a
             >
@@ -314,29 +303,13 @@
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
-            <ul class="portfolio-block__stack-icons">
-              <p class="detail-paragraph">Stack used:&nbsp;</p>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-html5"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-css3"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
-                </svg>
-              </li>
-              <li class="portfolio-block__icon-item">
-                <svg class="portfolio-block--icon">
-                  <use xlink:href="img/sprite.svg#icon-sass"></use>
-                </svg>
-              </li>
-            </ul>
+            <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+          <li class="technologies__item sass">SASS</li>
+        </ul>
+            
             <a href="#" class="portfolio-block__view-project btn-primary"
               >View project</a
             >
