Add Services content

--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@
       <div class="about__content--detail">
         <h2 class="heading-2">A bit about myself!</h2>
         <p class="detail-paragraph">
-          An enthusiastic <span class="highlight-text">Front-End developer</span> here! I&#39;m always anxious to
+          An enthusiastic <span class="highlight-text">Front-end developer</span> here! I&#39;m always anxious to
           learn and explore all there is about the web, constantly making myself
           up to date with the newest technologies to make my client&#39;s life
           more efficient and exceed their expectations.<span id="dots">...</span>
           <div class="collapsible">
             <p class="detail-paragraph">
-            Having the utmost respect for my client&#39;s hard-earned money is my
-          top priority. Having worked in customer support in the past facilitated me to
+            Having worked in customer support in the past facilitated me to
             connect with people with different mindsets regularly that made me
             who I&#39;m right now. I take pride in being highly adaptable and
             having a solution-driven approach to my work. <br/>
@@ -200,24 +199,25 @@
           <svg class="services__icon">
             <use xlink:href="img/sprite.svg#icon-layers"></use>
           </svg>
-          <h4 class="heading-4 card__heading">UI/UX Design</h4>
-          <h4 class="heading-4 card__heading">Mobile App Design</h4>
-          <h4 class="heading-4 card__heading">Responsive Design</h4>
+          <h4 class="heading-4 card__heading">Responsive Website</h4>
+          <h4 class="heading-4 card__heading">Optimized Images</h4>
+          <h4 class="heading-4 card__heading">Cross Browser Compatibility</h4>
+          
         </div>
         <div class="services__card">
           <svg class="services__icon">
             <use xlink:href="img/sprite.svg#icon-cogs"></use>
           </svg>
           <h4 class="heading-4 card__heading">Product Strategy</h4>
-          <h4 class="heading-4 card__heading">Design Sprints</h4>
-          <h4 class="heading-4 card__heading">UX Strategy</h4>
+          <h4 class="heading-4 card__heading">24/7 Customer Support</h4>
+          <h4 class="heading-4 card__heading">Website Management</h4>
         </div>
         <div class="services__card">
           <svg class="services__icon">
             <use xlink:href="img/sprite.svg#icon-embed2"></use>
           </svg>
-          <h4 class="heading-4 card__heading">HTML/CSS</h4>
-          <h4 class="heading-4 card__heading">Prototyping</h4>
+          <h4 class="heading-4 card__heading">SEO Friendly Markup</h4>
+          <h4 class="heading-4 card__heading">Clean & Compressed Code</h4>
           <h4 class="heading-4 card__heading">User Testing</h4>
         </div>
       </div>
