Contact form testing

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <label for="message" class="form__label">Your Message</label>
           </div>
           <div class="form__group">
-            <button class="form__submit btn-primary">Submit</button>
+            <button type="submit" class="form__submit btn-primary">Submit</button>
           </div>
         </form>
         <div class="contact__social-icons-box">
