--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         Reach out for a new project or just say hello!
       </h2>
       <div class="contact__form-box" id="contact">
-        <form form id="form" method="post" action="contact-form.php" class="form">
+        <form id="form" method="post" action="contact-form.php" class="form">
           <h3 class="heading-3 contact__form-heading">SEND ME A MESSAGE</h3>
           <div class="form__group">
             <input
