--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
               name="Name"
               required
             />
-            <label for="name" class="form__label">Your Name</label>
+            <label for="Name" class="form__label">Your Name</label>
           </div>
           <div class="form__group">
             <input
@@ -346,7 +346,7 @@
               name="Email"
               required
             />
-            <label for="email" class="form__label">Your Email</label>
+            <label for="Email" class="form__label">Your Email</label>
           </div>
           <div class="form__group">
             <input
@@ -356,19 +356,18 @@
               id="Subject"
               name="Subject"
             />
-            <label for="subject" class="form__label">Subject (Optional)</label>
+            <label for="Subject" class="form__label">Subject (Optional)</label>
           </div>
           <div class="form__group">
             <textarea
               class="form__input"
-              name="message"
+              name="Message"
               cols="50"
               rows="6"
               placeholder="Your Message"
-              id="Message" 
-              name="Message"
+              id="Message"
             ></textarea>
-            <label for="message" class="form__label">Your Message</label>
+            <label for="Message" class="form__label">Your Message</label>
           </div>
           <div class="form__group">
             <button type="submit" class="form__submit btn-primary">Submit</button>
