add forkify to portfolio

--- a/index.html
+++ b/index.html
@@ -238,20 +238,21 @@
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Application</h5>
             <h2 class="heading-2 portfolio-block__details-box__heading">
-              Even the all-powerful Pointing has no control
+             Forkify | Recipe application with custom recipe uploads
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a small
-              line of blind text.
+              A thoroughly functional and elegant application that allows its user to search, bookmark, create recipes and update the servings so they can get the recipe accordingly. <br/>
+Built with the MVC architecture and OOP which makes the app future proof in terms of structure, maintainability and expandability to easily add new features in the future
+
             </p>
             <ul class="technologies">
           <li class="technologies__item html">HTML</li>
           <li class="technologies__item css">CSS</li>
           <li class="technologies__item JS">JavaScript</li>
           <li class="technologies__item sass">SASS</li>
+          <li class="technologies__item">API</li>
         </ul>
-            <a href="#" class="portfolio-block__view-project btn-primary"
+            <a href="https://us-man-forkify.netlify.app/" class="portfolio-block__view-project btn-primary" target="_blank"
               >View project</a
             >
           </div>
