--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
               A thoroughly functional and elegant application that allows its user to search, bookmark, create recipes and update the servings so they can get the recipe accordingly. <br/>
-Built with the MVC architecture and OOP which makes the app future proof in terms of structure, maintainability and expandability to easily add new features in the future
+Built with the MVC architecture and OOP which makes the app future proof in terms of structure, maintainability and expandability to easily add new features in the future.
 
             </p>
             <ul class="technologies">
@@ -266,22 +266,19 @@ Built with the MVC architecture and OOP which makes the app future proof in term
             >
           </div>
           <div class="portfolio-block__details-box">
-            <h5 class="heading-5">Landing Page</h5>
+            <h5 class="heading-5">Application</h5>
             <h2 class="heading-2 portfolio-block__details-box__heading">
-              Even the all-powerful Pointing has no control
+              TODO APP | Classic app with a few twists!
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a small
-              line of blind text.
+              The sacred Todo application. A staple for every portfolio website. This one comes with a dark/light theme toggle including the more traditional features like adding, removing and checking/unchecking tasks. Also, added 3 filter options for some good measures.
             </p>
             <ul class="technologies">
           <li class="technologies__item html">HTML</li>
           <li class="technologies__item css">CSS</li>
           <li class="technologies__item JS">JavaScript</li>
-          <li class="technologies__item sass">SASS</li>
         </ul>
-            <a href="#" class="portfolio-block__view-project btn-primary"
+            <a href="https://us-man-todo.netlify.app/" class="portfolio-block__view-project btn-primary" target="_blank"
               >View project</a
             >
           </div>
