--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Built with the MVC architecture and OOP which makes the app future proof in term
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Application</h5>
             <h2 class="heading-2 portfolio-block__details-box__heading">
-              TODO APP | Classic app with a few twists!
+              TODO | Classic app with a few twists!
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
               The sacred Todo application. A staple for every portfolio website. This one comes with a dark/light theme toggle including the more traditional features like adding, removing and checking/unchecking tasks. Also, added 3 filter options for some good measures.
