--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p class="detail-paragraph">
           An enthusiastic <span class="highlight-text">Front-end developer</span> here! I&#39;m always anxious to
           learn and explore all there is about the web, constantly making myself
-          up to date with the newest technologies to make my client&#39;s life
+          up to date with the newest <span class="highlight-text">technologies</span> to make my client&#39;s life
           more efficient and exceed their expectations.<span id="dots">...</span>
           <div class="collapsible">
             <p class="detail-paragraph">
@@ -103,7 +103,8 @@
             connect with people with different mindsets regularly that made me
             who I&#39;m right now. I take pride in being highly adaptable and
             having a solution-driven approach to my work. <br/>
-            Also, I&#39;m looking for a role as a front-end dev (remote or
+            Curruntly learning <span class="highlight-text">React</span> and <span class="highlight-text">SEO</span> also spending my time to know more about <span class="highlight-text">Wordpress</span>.
+            Also, I&#39;m looking for a role as a <span class="highlight-text">Front-end developer</span> (remote or
             otherwise).
             </p>
         </div>
@@ -292,23 +293,20 @@ Built with the MVC architecture and OOP which makes the app future proof in term
             >
           </div>
           <div class="portfolio-block__details-box">
-            <h5 class="heading-5">Website Design</h5>
+            <h5 class="heading-5">Website</h5>
             <h2 class="heading-2 portfolio-block__details-box__heading">
-              Even the all-powerful Pointing has no control
+              Nexter | The ultimate personal freedom
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a small
-              line of blind text.
+              A gorgeous single page website. Made with CSS Grid and Flexbox, containing beautiful sections like image gallary and minimalist booking cards all completly responsive.
             </p>
             <ul class="technologies">
           <li class="technologies__item html">HTML</li>
           <li class="technologies__item css">CSS</li>
-          <li class="technologies__item JS">JavaScript</li>
           <li class="technologies__item sass">SASS</li>
         </ul>
             
-            <a href="#" class="portfolio-block__view-project btn-primary"
+            <a href="https://us-man-nexter.netlify.app/" class="portfolio-block__view-project btn-primary" target="_blank"
               >View project</a
             >
           </div>
