--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             connect with people with different mindsets regularly that made me
             who I&#39;m right now. I take pride in being highly adaptable and
             having a solution-driven approach to my work. <br/>
-            Curruntly learning <span class="highlight-text">React</span>, <span class="highlight-text">SEO</span> and spending my time to know more about <span class="highlight-text">Wordpress</span>.<br/>
+            Curruntly learning <span class="highlight-text">React
+            </span>, <span class="highlight-text">SEO</span> and spending my time to know more about <span class="highlight-text">Wordpress</span>.<br/>
             Also, I&#39;m looking for a role as a <span class="highlight-text">Front-end developer</span> (remote or
             otherwise).
             </p>
@@ -232,9 +233,7 @@
         <!-- Block Start -->
         <div class="portfolio-block" id="block-1">
           <div class="portfolio-block__img-box" id="port-img1">
-            <span class="portfolio-block__img portfolio-block__img-1"
-              >&nbsp;</span
-            >
+            <img src="img/forkify-app.jpg" alt="Cooking recipe application" class="portfolio-block__img portfolio-block__img-1">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Application</h5>
@@ -262,9 +261,7 @@ Built with the MVC architecture and OOP which makes the app future proof in term
         <!-- Block Start -->
         <div class="portfolio-block" id="block-2">
           <div class="portfolio-block__img-box" id="port-img2">
-            <span class="portfolio-block__img portfolio-block__img-2"
-              >&nbsp;</span
-            >
+            <img src="img/todo-app.jpg" alt="Todo application" class="portfolio-block__img portfolio-block__img-2">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Application</h5>
@@ -288,9 +285,7 @@ Built with the MVC architecture and OOP which makes the app future proof in term
         <!-- Block Start -->
         <div class="portfolio-block" id="block-3">
           <div class="portfolio-block__img-box" id="port-img3">
-            <span class="portfolio-block__img portfolio-block__img-3"
-              >&nbsp;</span
-            >
+            <img src="img/nexter.jpg" alt="Nexter property website" class="portfolio-block__img portfolio-block__img-3">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Website</h5>
