add pig game to portfolio

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
             connect with people with different mindsets regularly that made me
             who I&#39;m right now. I take pride in being highly adaptable and
             having a solution-driven approach to my work. <br/>
-            Curruntly learning <span class="highlight-text">React
-            </span>, <span class="highlight-text">SEO</span> and spending my time to know more about <span class="highlight-text">Wordpress</span>.<br/>
+            Curruntly learning <span class="highlight-text">React</span>, <span class="highlight-text">SEO</span> and spending my time to know more about <span class="highlight-text">Wordpress</span>.<br/>
             Also, I&#39;m looking for a role as a <span class="highlight-text">Front-end developer</span> (remote or
             otherwise).
             </p>
@@ -233,7 +232,7 @@
         <!-- Block Start -->
         <div class="portfolio-block" id="block-1">
           <div class="portfolio-block__img-box" id="port-img1">
-            <img src="img/forkify-app.jpg" alt="Cooking recipe application" class="portfolio-block__img portfolio-block__img-1">
+            <img src="img/forkify.jpg" alt="Cooking recipe application" class="portfolio-block__img portfolio-block__img-1">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Application</h5>
@@ -241,11 +240,17 @@
              Forkify | Recipe application with custom recipe uploads
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              A thoroughly functional and elegant application that allows its user to search, bookmark, create recipes and update the servings so they can get the recipe accordingly. <br/>
-Built with the MVC architecture and OOP which makes the app future proof in terms of structure, maintainability and expandability to easily add new features in the future.
-
+              A thoroughly functional and elegant application that allows its user to search, bookmark, create recipes and update the servings so they can get the recipe accordingly.<span id="dots">...</span>
+              <div class="collapsible">
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
+           Built with the MVC architecture and OOP which makes the app future proof in terms of structure, maintainability and expandability to easily add new features in the future.
             </p>
-            <ul class="technologies">
+              </div>
+            <button class="read-more detail-paragraph secondary-text misc__read-more">
+            read more &darr;
+          </button>
+            </p>
+        <ul class="technologies">
           <li class="technologies__item html">HTML</li>
           <li class="technologies__item css">CSS</li>
           <li class="technologies__item JS">JavaScript</li>
@@ -269,7 +274,15 @@ Built with the MVC architecture and OOP which makes the app future proof in term
               TODO | Classic app with a few twists!
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              The sacred Todo application. A staple for every portfolio website. This one comes with a dark/light theme toggle including the more traditional features like adding, removing and checking/unchecking tasks. Also, added 3 filter options for some good measures.
+              The sacred Todo application. A staple for every portfolio website. This one comes with a dark/light theme toggle.<span id="dots">...</span>
+              <div class="collapsible">
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
+           Also including the more traditional features like adding, removing and checking/unchecking tasks. Also, added 3 filter options for some good measures.
+            </p>
+              </div>
+            <button class="read-more detail-paragraph secondary-text misc__read-more">
+            read more &darr;
+          </button>
             </p>
             <ul class="technologies">
           <li class="technologies__item html">HTML</li>
@@ -302,6 +315,30 @@ Built with the MVC architecture and OOP which makes the app future proof in term
         </ul>
             
             <a href="https://us-man-nexter.netlify.app/" class="portfolio-block__view-project btn-primary" target="_blank"
+              >View project</a
+            >
+          </div>
+        </div>
+        <!-- Block End -->
+         <!-- Block Start -->
+        <div class="portfolio-block" id="block-4">
+          <div class="portfolio-block__img-box" id="port-img4">
+            <img src="img/pig-game.jpg" alt="Pig game" class="portfolio-block__img portfolio-block__img-4">
+          </div>
+          <div class="portfolio-block__details-box">
+            <h5 class="heading-5">Game</h5>
+            <h2 class="heading-2 portfolio-block__details-box__heading">
+             PIG Game | Multiplayer fun
+            </h2>
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
+              A wonderful Multiplayer dice rolling game that'll test your luck and your game approach to whether hold your points and wait for the next turn or just be brave and keep going.
+            </p>
+            <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+        </ul>
+            <a href="https://us-man-pig-game.netlify.app/" class="portfolio-block__view-project btn-primary" target="_blank"
               >View project</a
             >
           </div>
