add room homepage to portfolio

--- a/index.html
+++ b/index.html
@@ -298,7 +298,33 @@
         <!-- Block Start -->
         <div class="portfolio-block" id="block-3">
           <div class="portfolio-block__img-box" id="port-img3">
-            <img src="img/nexter.jpg" alt="Nexter property website" class="portfolio-block__img portfolio-block__img-3">
+            <img src="img/room-homepage.jpg" alt="Room Homepage Landing Page" class="portfolio-block__img portfolio-block__img-3">
+          </div>
+          <div class="portfolio-block__details-box">
+            <h5 class="heading-5">Website</h5>
+            <h2 class="heading-2 portfolio-block__details-box__heading">
+             Room | Discover innovative ways to decorate
+            </h2>
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
+              E-commerce homepage for a furniture website. A Simplistic design with a beautiful slider that changes the hero image and the section's heading along with the content with a single click.
+              
+            </p>
+        <ul class="technologies">
+          <li class="technologies__item html">HTML</li>
+          <li class="technologies__item css">CSS</li>
+          <li class="technologies__item JS">JavaScript</li>
+          <li class="technologies__item sass">SASS</li>
+        </ul>
+            <a href="https://usman-fe.github.io/room-homepage/" class="portfolio-block__view-project btn-primary" target="_blank"
+              >View project</a
+            >
+          </div>
+        </div>
+        <!-- Block End -->
+        <!-- Block Start -->
+        <div class="portfolio-block" id="block-4">
+          <div class="portfolio-block__img-box" id="port-img4">
+            <img src="img/nexter.jpg" alt="Nexter property website" class="portfolio-block__img portfolio-block__img-4">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Website</h5>
@@ -321,9 +347,9 @@
         </div>
         <!-- Block End -->
          <!-- Block Start -->
-        <div class="portfolio-block" id="block-4">
-          <div class="portfolio-block__img-box" id="port-img4">
-            <img src="img/pig-game.jpg" alt="Pig game" class="portfolio-block__img portfolio-block__img-4">
+        <div class="portfolio-block" id="block-5">
+          <div class="portfolio-block__img-box" id="port-img5">
+            <img src="img/pig-game.jpg" alt="Pig game" class="portfolio-block__img portfolio-block__img-5">
           </div>
           <div class="portfolio-block__details-box">
             <h5 class="heading-5">Game</h5>
