Fix social links

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </li>
           <li class="about__content--icon-item social-icons__icon-item">
             <a
-              href="https://www.fiverr.com/share/j7a7zG"
+              href="https://www.fiverr.com/us_man_web/build-a-responsive-static-website"
               class="about__content--link social-icons__link"
               target="_blank"
             >
@@ -357,7 +357,7 @@
              PIG Game | Multiplayer fun
             </h2>
             <p class="detail-paragraph portfolio-block__details-box__paragraph">
-              A wonderful Multiplayer dice rolling game that'll test your luck and your game approach to whether hold your points and wait for the next turn or just be brave and keep going.
+              A wonderful Multiplayer dice rolling game that'll test your luck and your game approach to whether hold your points and wait for the next turn or just be brave and keep going. The first player to reach a hundred points wins.
             </p>
             <ul class="technologies">
           <li class="technologies__item html">HTML</li>
@@ -478,7 +478,7 @@
             </li>
             <li class="contact--icon-item social-icons__icon-item">
               <a
-                href="https://www.fiverr.com/share/j7a7zG"
+                href="https://www.fiverr.com/us_man_web/build-a-responsive-static-website"
                 class="contact--link social-icons__link"
                 target="_blank"
               >
