Add google analytics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="zn2D2I3QzgEqgU7MjuF4PpPkQ3ZoeQBFROAbu4t59mY" />
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link
