--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
           <div class="collapsible">
             <p class="detail-paragraph">
             Having worked in customer support in the past facilitated me to
-            connect with people with different mindsets regularly that made me
+            connect with people with different mindsets regularly which made me
             who I&#39;m right now. I take pride in being highly adaptable and
             having a solution-driven approach to my work. <br/>
-            Curruntly learning <span class="highlight-text">React</span>, <span class="highlight-text">SEO</span> and spending my time to know more about <span class="highlight-text">Wordpress</span>.<br/>
+            Currently learning <span class="highlight-text">React</span>, <span class="highlight-text">SEO</span>, and spending my time to know more about <span class="highlight-text">WordPress</span>.<br/>
             Also, I&#39;m looking for a role as a <span class="highlight-text">Front-end developer</span> (remote or
             otherwise).
             </p>
